# echo-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-release.yml  build-target.yml  build.yml
src/: main.rs
